tests/fixtures/type_checker/error/break_outside_loop.galaxy
void break_outside_loop()
{
    break;
    continue;
}
